# fusion

./: .gitignore  README.md  config.json  config.py  default.json  pyproject.toml  requirements.txt  setup.py
fusion/: __main__.py  client.py  config.py  device.py  index.py  interface.py  path.py  storage.py
fusion/configs/: config.json
fusion/helpers/: completion.py  constants.py  deleteListing.py  file.py  fileListing.py  logger.py  progress.py  utils.py
fusion/lib/: constants.py  path.py
fusion/ui/: __init__.py  container.py  message.py  progress_bar.py  prompt_list.py
fusion/utils/: config.py  functions.py  logger.py
old_files/: adb.py  cli.py  index.py  pull.py  push.py  sync.py  utils.py
shift/: __init__.py  __main__.py  a.py  client.py  device.py  exceptions.py  index.py  path.py  storage.py
shift/helpers/: constants.py  deleteListing.py  file.py  fileListing.py  interface.py  logger.py  progress.py  stat.py  utils.py  worker.py
shift/ui/: __init__.py  confirm.py  get_device.py  keyboard_window.py  message.py  progress_bar.py  prompt_list.py
tests/: conftest.py  test_pull.py  test_push.py  test_shift.py
