# pyproject.toml

[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shift"
version = "0.0.1"
description = "My awesome Hello CLI application"
readme = "README.md"
authors = [{ name = "Mohammad Mallaee", email = "mohammad.mallaee@gmail.com" }]

[project.scripts]
shift = "shift.__main__:main"
