[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.26"]

[project]
authors = [{name = "Mohammad Mallaee"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = ["pytermgui", "argcomplete"]
description = "Keep your files in sync"
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
name = "fusion-sync"
readme = "README.md"
requires-python = ">=3.9"
version = "0.4.0"

[project.scripts]
fusion = "fusion.__main__:main"

[project.urls]
Homepage = "https://github.com/mohammad-mallaee/fusion"
Issues = "https://github.com/mohammad-mallaee/fusion/issues"

[tool.hatch.build]
include = [
  "fusion/configs",
  "fusion/**/*.py",
]
